refactor(model): Lotto 클래스 리팩토링 및 추가 기능 구현
- 상수 관리 일원화를 위해 LottoConstants의 MIN_NUMBER, MAX_NUMBER, LOTTO_NUMBER_COUNT 사용
- getMatchCount 메서드 추가: 당첨 번호와 일치하는 개수 계산 기능 구현
- containsBonus 메서드 추가: 보너스 번호 포함 여부 검증 기능 구현
- formatNumbers 메서드 추가: 번호 목록을 형식화하여 문자열로 출력
- numbers 리스트를 정렬된 불변 리스트로 반환하여 안정성 강화